manifests/registry/base/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry-api
    component: apicurio-registry-api
  name: apicurio-registry-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-registry-api
  template:
    metadata:
      labels:
        app: apicurio-registry-api
        component: apicurio-registry-api
    spec:
      containers:
        - image: >-
            quay.io/apicurio/apicurio-registry-sql@sha256:b2b3c19d21ad49651d8174104836d7d93648f8103299e33ec860d52994542ba4
          name: apicurio-registry-api
          ports:
            - name: web
              containerPort: 8080
              protocol: TCP
          env:
            - name: AUTH_ENABLED
              value: 'true'
            - name: KEYCLOAK_URL
              value: >-
                https://keycloak-rhaf-apicurio-designer.apps.dev-eng-ocp4-mas.dev.3sca.net/
            - name: KEYCLOAK_REALM
              value: registry
            - name: KEYCLOAK_API_CLIENT_ID
              value: registry-api
            - name: REGISTRY_LOG_LEVEL
              value: DEBUG
            - name: LOG_LEVEL
              value: DEBUG
            - name: QUARKUS_PROFILE
              value: prod
            - name: REGISTRY_CONFIG_CACHE_ENABLED
              value: 'true'
            - name: CORS_ALLOWED_ORIGINS
              value: '*'
            - name: REGISTRY_DATABASE
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-credentials
                  key: database
            - name: REGISTRY_DATASOURCE_PORT
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-credentials
                  key: port
            - name: REGISTRY_DATASOURCE_HOST
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-credentials
                  key: host
            - name: REGISTRY_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-credentials
                  key: user
            - name: REGISTRY_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: rds-apicurio-credentials
                  key: password
            - name: REGISTRY_DATASOURCE_URL
              value: >-
                jdbc:postgresql://${REGISTRY_DATASOURCE_HOST}:${REGISTRY_DATASOURCE_PORT}/${REGISTRY_DATABASE}
          resources:
            limits:
              cpu: 500m
              memory: 1000Mi
            requests:
              cpu: 200m
              memory: 400Mi
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
