manifests/registry/base/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry
    component: apicurio-registry-api
  name: apicurio-registry-api
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: apicurio-registry-api
  template:
    metadata:
      labels:
        app: apicurio-registry
        component: apicurio-registry-api
    spec:
      containers:
      - image: quay.io/apicurio/apicurio-registry-sql:latest-snapshot
        name: apicurio-registry-api
        ports:
          - name: web
            containerPort: 8080
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
          requests:
            cpu: 200m
            memory: 400Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry
    component: apicurio-registry-ui
  name: apicurio-registry-ui
spec:
  replicas: 1
  selector:
    matchLabels: 
      component: apicurio-registry-ui
  template:
    metadata:
      labels:
        app: apicurio-registry
        component: apicurio-registry-ui
    spec:
      containers:
      - image: quay.io/apicurio/apicurio-registry-ui:latest-snapshot
        name: apicurio-registry-ui
        ports:
          - name: web
            containerPort: 8080
            protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /config.js
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /config.js
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
