manifests/registry/base/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apicurio-registry-postgresql
  name: apicurio-registry-postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apicurio-registry-postgresql
  template:
    metadata:
      labels:
        app: apicurio-registry-postgresql
    spec:
      containers:
        - name: apicurio-registry-postgresql
          image: quay.io/centos7/postgresql-12-centos7:1
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: apicurio-registry-postgresql
            - mountPath: /opt/app-root/src/postgresql-start/
              name: create-databases-script
          resources:
            limits:
              cpu: 1000m
              memory: 1200Mi
            requests:
              cpu: 400m
              memory: 500Mi
      volumes:
        - name: apicurio-registry-postgresql
          persistentVolumeClaim:
            claimName: apicurio-registry-postgresql
        - name: create-databases-script
          configMap:
            name: db-init-script-configmap
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apicurio-registry-postgresql
  name: apicurio-registry-postgresql
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: apicurio-registry-postgresql
  type: ClusterIP
