manifests/registry/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry-api
    template: apicurio-registry-api
  name: apicurio-registry-api
spec:
  selector:
    component: apicurio-registry-api
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web # referring to target port via "name" instead that via the number
  sessionAffinity: None
status:
  loadBalancer: {}
