manifests/registry/base/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry-ui
    template: apicurio-registry-ui
  name: apicurio-registry-ui
spec:
  selector:
    component: apicurio-registry-ui
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web # referring to target port via "name" instead that via the number
  sessionAffinity: None
status:
  loadBalancer: {}
