manifests/registry/base/services.yaml
# Services for the components
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry-api
    template: apicurio-registry-api
  name: apicurio-registry-api
spec:
  selector:
    app: apicurio-registry-api
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web # referring to target port via "name" instead that via the number
  sessionAffinity: None
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: apicurio-registry-ui
    template: apicurio-registry-ui
  name: apicurio-registry-ui
spec:
  selector:
    app: apicurio-registry-ui
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: web # referring to target port via "name" instead that via the number
  sessionAffinity: None
status:
  loadBalancer: {}
