manifests/registry/base/route-api.yaml
# Routes
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apicurio-registry-api
  # TODO add the annotation as an overlay patch
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: apicurio-registry-api
    template: apicurio-registry-api
spec:
  to:
    kind: Service
    name: apicurio-registry-api
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
